// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpSecurityDefined oas2 return errors on invalid object 1`] = `
Array [
  Object {
    "code": "operation-security-defined",
    "message": "operation referencing undefined security scheme",
    "path": Array [
      "paths",
      "/path",
      "get",
      "security",
      "0",
    ],
    "severity": 1,
    "summary": "Operation \`security\` values must match a scheme defined in the \`securityDefinitions\` object.",
  },
]
`;

exports[`oasOpSecurityDefined oas3 return errors on invalid object 1`] = `
Array [
  Object {
    "code": "operation-security-defined",
    "message": "operation referencing undefined security scheme",
    "path": Array [
      "paths",
      "/path",
      "get",
      "security",
      "0",
    ],
    "severity": 1,
    "summary": "Operation \`security\` values must match a scheme defined in the \`components.securitySchemes\` object.",
  },
]
`;
